--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,15 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+}
+
+html, body {
+  min-height: 100%;
+}
+
 body {
+  background: radial-gradient(#eeeeee, #444444);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,7 +17,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background:#999;
 }
 
 code {
@@ -21,4 +31,24 @@ code {
 	font-weight: bold;
 	color:white;
 	text-transform: uppercase;
+}
+
+.refresh_box{
+	padding: 20px 0;
+	display: inline-block;
+	color: #ffffff;
+	vertical-align: middle;
+	font-size: 12px;
+}
+.refresh{
+	cursor: pointer;
+	text-transform: capitalize;
+	font-weight: normal;
+	padding: 15px 4px;
+	border: 1px solid #ffffff;
+	border-radius: 100%;
+	overflow: hidden;
+	font-size: 12px;
+	color: #fff;
+
 }
